--- a/home.html
+++ b/home.html
@@ -10,81 +10,81 @@
 <body>
 	
 	<div class="HeaderAndContent-wrap TestBorder-div-HandCwrap">
-	
-	<div class="MainHeader-wrap TestBorder-div">
-		<header class="MainHeader">
-			<ul class="MainHeader-nav TestBorder-ul">
-				<li>Logo</li>
-				<li>Hamburger Menu</li>
-			</ul>
-		</header>
-	</div>
-	
-	<div class="Sections-wrap TestBorder-div">
 		
-	<div class="SectionOne-wrap TestBorder-div">
-		<section class="SectionOne TestBorder-section">
-			<div class="SectionOneItems-wrap TestBorder-div">
-				<h1>Section 1</h1>
-				<h2>This section...</h2>
+		<div class="MainHeader-wrap TestBorder-div">
+			<header class="MainHeader">
+				<ul class="MainHeader-nav TestBorder-ul">
+					<li>Logo</li>
+					<li>Hamburger Menu</li>
+				</ul>
+			</header>
+		</div>
+
+		<div class="Sections-wrap TestBorder-div">
+
+			<div class="SectionOne-wrap TestBorder-div">
+				<section class="SectionOne TestBorder-section">
+					<div class="SectionOneItems-wrap TestBorder-div">
+						<h1>Section 1</h1>
+						<h2>This section...</h2>
+					</div>
+				</section>
 			</div>
-		</section>
-	</div>
-	
-	<div class="SectionOne-wrap TestBorder-div">
-		<section class="SectionOne TestBorder-section">
-			<div class="SectionOneItems-wrap TestBorder-div">
-				<h1>Section 2</h1>
-				<h2>This section...</h2>
+
+			<div class="SectionOne-wrap TestBorder-div">
+				<section class="SectionOne TestBorder-section">
+					<div class="SectionOneItems-wrap TestBorder-div">
+						<h1>Section 2</h1>
+						<h2>This section...</h2>
+					</div>
+				</section>
 			</div>
-		</section>
-	</div>
-	
-	<div class="SectionOne-wrap TestBorder-div">
-		<section class="SectionOne TestBorder-section">
-			<div class="SectionOneItems-wrap TestBorder-div">
-				<h1>Section 3</h1>
-				<h2>This section...</h2>
+
+			<div class="SectionOne-wrap TestBorder-div">
+				<section class="SectionOne TestBorder-section">
+					<div class="SectionOneItems-wrap TestBorder-div">
+						<h1>Section 3</h1>
+						<h2>This section...</h2>
+					</div>
+				</section>
 			</div>
-		</section>
-	</div>
-	
-	<div class="SectionOne-wrap TestBorder-div">
-		<section class="SectionOne TestBorder-section">
-			<div class="SectionOneItems-wrap TestBorder-div">
-				<h1>Section 4</h1>
-				<h2>This section...</h2>
+
+			<div class="SectionOne-wrap TestBorder-div">
+				<section class="SectionOne TestBorder-section">
+					<div class="SectionOneItems-wrap TestBorder-div">
+						<h1>Section 4</h1>
+						<h2>This section...</h2>
+					</div>
+				</section>
 			</div>
-		</section>
-	</div>
-	
-	<div class="SectionOne-wrap TestBorder-div">
-		<section class="SectionOne TestBorder-section">
-			<div class="SectionOneItems-wrap TestBorder-div">
-				<h1>Section 5</h1>
-				<h2>This section...</h2>
+
+			<div class="SectionOne-wrap TestBorder-div">
+				<section class="SectionOne TestBorder-section">
+					<div class="SectionOneItems-wrap TestBorder-div">
+						<h1>Section 5</h1>
+						<h2>This section...</h2>
+					</div>
+				</section>
 			</div>
-		</section>
-	</div>
-	
-	<div class="SectionOne-wrap TestBorder-div">
-		<section class="SectionOne TestBorder-section">
-			<div class="SectionOneItems-wrap TestBorder-div">
-				<h1>Section 6</h1>
-				<h2>This section...</h2>
+
+			<div class="SectionOne-wrap TestBorder-div">
+				<section class="SectionOne TestBorder-section">
+					<div class="SectionOneItems-wrap TestBorder-div">
+						<h1>Section 6</h1>
+						<h2>This section...</h2>
+					</div>
+				</section>
 			</div>
-		</section>
-	</div>
-		
-	</div>	<!-- End Sections-wrap -->
+
+		</div>	<!-- End Sections-wrap -->
 		
 	</div>  <!-- End HeaderAndContent-wrap -->
 	
 	<div class="MainFooter-wrap TestBorder-div">
 		<footer class="MainFooter TestBorder-footer">
 			<div class="MainFooterItems-wrap TestBorder-div">
-				<p>&copy;2019 Laguna Labs</p>
-				<p>Back to top&raquo;</p>
+				<p>&copy; 2019 Laguna Labs&trade;</p>
+				<p><a href="#top">Back to top &raquo;</a></p>
 			</div>
 		</footer>
 	</div>
